--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "clickygame",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://bhoward19.github.io/SmashClick/",
   "dependencies": {
     "react-scripts": "1.1.4"
   },
@@ -9,10 +10,12 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "gh-pages": "^1.1.0",
+    "gh-pages": "^1.2.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2"
   }
