--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "clickygame",
+  "name": "smashclick",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://bhoward19.github.io/SmashClick/",
